Maaaaaany things has happened

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 JavaDoc/
 /**/workspace.xml
 /**/out/
+/**/dictionaries/
+/CA_server/.idea/libraries/Arquillian_JUnit_Release.xml
+/CA_server/Security/
+/CA_server/Log/
