--- a/SmartHome_AndroidClient/app/build.gradle
+++ b/SmartHome_AndroidClient/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.madgag.spongycastle:prov:1.56.0.0'
     compile 'com.madgag.spongycastle:pkix:1.54.0.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:design:25.3.1'
 }
